2008-05-24  James Sharpe <jsharpe@gnome.org>

	* gdk/gdk.symbols: Remove duplicate
	gdk_window_redirect_to_drawable and gdk_window_remove_redirection
	* gtk/gtk.symbols: Remove duplicate gtk_widget_get_snapshot
	
2008-05-23  Hans Breuer  <hans@breuer.org>

	* **/makefile.msc gtk/makefile.msc.in : updated
	* gtk/gtkwidget.c : fix c99ism (variable at start of block
	* gdk/gdk.symbols gtk/gtk.symbols : export functions for window 
	redirection
	* gtk/gtkfilechooserdefault.c : #include <locale.h> for 
	setlocale(LC_ALL, ...)

2008-05-23  Tor Lillqvist  <tml@novell.com>

	* gdk/gdk.symbols: Add gdk_window_redirect_to_drawable and
	gdk_window_remove_redirection.

	* gdk/win32/gdkwindow-win32.c (_gdk_window_new)
	(_gdk_window_reparent): Rename to adapt to the offscreen rendering
	changes. Remove now unnecessary parameter checks as the caller
	does that already.

	* gtk/gtk.symbols: Add gtk_widget_get_snapshot.

2008-05-23  Tor Lillqvist  <tml@novell.com>

	* gdk/win32/gdkwindow-win32.c (update_style_bits): Don't do
	anything if style doesn't change. Improve debugging output.

2008-05-23  Michael Natterer  <mitch@gimp.org>

	* perf/widgets.h
	* tests/print-editor.c
	* tests/prop-editor.h
	* tests/testmountoperation.c
	* tests/testmultidisplay.c
	* tests/testnouiprint.c
	* tests/testprint.c
	* tests/testprintfileoperation.h
	* tests/testtreesort.c
	* tests/textbuffertest.c: include <gtk/gtk.h> instead of single
	files. Remove some redundant includes.

2008-05-22  Hiroyuki Ikezoe  <poincare@ikezoe.net>

	* gtk/gtksockget.c: (gtk_socket_realize): Remove second call of
	GTK_WIDGET_SET_FLAGS (widget, GTK_REALIZED).

2008-05-21  Richard Hult  <richard@imendio.com>

	* gdk/quartz/gdkwindow-quartz.c:
	(_gdk_window_new), (_gdk_window_reparent): Renamed to adapt to the
	offscreen rendering changes, fixes build.

2008-05-21 21:10:15  Tim Janik  <timj@imendio.com>

	* gtk/gtkwidget.h: added GdkRectangle *clip_rect to gtk_widget_get_snapshot().
